# todo

./: .gitignore  LICENSE  MULTI_MODEL_SUPPORT.md  README.md  demo_ai_chat.py  enhanced_todo_agent.py  example_todo_agent.py  example_usage.py  main.py  modify_scripts.py  pyproject.toml
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
src/cli/: ai_commands.py  main.py  task_commands.py
src/models/: __init__.py  database.py  task.py
src/services/: __init__.py  ai_service.py  task_service.py
src/tools/: __init__.py  todo.py
todo/: __init__.py  config.py  database.py  langchain_tools.py  main.py
todo/cli/: __init__.py  ai_commands.py  main.py  task_commands.py
todo/commands/: __init__.py  category.py  chat.py  stats.py  tag.py  task.py
todo/models/: __init__.py  category.py  database.py  tag.py  task.py
todo/services/: ai_service.py  task_service.py
todo/utils/: __init__.py  date_utils.py  display.py  helpers.py
